aligned with sidecar 2.0.0-alpha7